added changes and functionalty

--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,9 @@ label {
     border: none;
     cursor: pointer;
   }
+
+select option:disabled {
+    color: gray;
+    background-color: #f0f0f0;
+    cursor: not-allowed;
+}
